--- a/src/main/webapp/app/entities/product/product.component.html
+++ b/src/main/webapp/app/entities/product/product.component.html
@@ -13,6 +13,116 @@
     <div class="alert alert-warning" *ngIf="products?.length === 0">
         <span jhiTranslate="exemple2App.product.home.notFound">No products found</span>
     </div>
+
+<!--**********************-->
+
+<div class="mb-2 d-flex justify-content-end align-items-center">
+        <span class="mr-2 col-2">Filter by name</span>
+        <input type="search" class="form-control" [(ngModel)]="filter">
+        <span class="mx-2 col-1">Sort by</span>
+        <div class="btn-group" role="group"
+            jhiSort [(predicate)]="predicate" [(ascending)]="reverse"
+             [callback]="transition.bind(this)">
+                <button type="button" class="btn btn-light" jhiSortBy="name">
+                    <span jhiTranslate="exemple2App.product.name">Name</span>
+                    <span class="fa fa-sort"></span>
+                </button>
+                <button type="button" class="btn btn-light" jhiSortBy="price">
+                    <span jhiTranslate="exemple2App.product.price">Price</span>
+                    <span class="fa fa-sort"></span>
+                </button>
+                <button type="button" class="btn btn-light" jhiSortBy="size">
+                    <span jhiTranslate="exemple2App.product.size">Size</span>
+                    <span class="fa fa-sort"></span>
+                </button>
+                <button type="button" class="btn btn-light"
+                    jhiSortBy="productCategory.id">
+                    <span
+                        jhiTranslate="exemple2App.product.productCategory">Product Category</span>
+                    <span class="fa fa-sort"></span>
+                </button>
+        </div>
+</div>
+
+<!--*****************-->
+
+<div *ngIf="products">
+    <div class="list-group">
+        <a [routerLink]="['../product', product.id ]"class="list-group-item list-group-item-action flex-column
+             align-items-start"
+             *ngFor="let product of products; trackBy: trackId">
+             <div class="row">
+                <div class="col-2 col-xs-12 justify-content-center">
+                    <img [src]="'data:' + product.imageContentType +
+                         ';base64,' + product.image"
+                             style="max-height:150px;" alt="product image"/>
+                 </div>
+                <div class="col col-xs-12">
+                    <div class="d-flex w-100 justify-content-between">
+                        <h5 class="mb-1">{{product.name}}</h5>
+                         <small *ngIf="product.productCategory">
+                        <a [routerLink]="['../product-category',
+                        product.productCategory?.id ]" >
+                        {{product.productCategory?.id}}
+                        </a>
+                         </small>
+                     </div>
+                    <small class="mb-1">{{product.description}}</small>
+                    <p class="mb-1">{{product.price | currency:'USD'}}</p>
+                     <small>
+                         Size:
+                        <span jhiTranslate="{{'exemple2App.Size.' +
+                            product.size}}">
+                        {{product.size}}
+                         </span>
+                     </small>
+                    <div *jhiHasAnyAuthority="'ROLE_ADMIN'">
+                        <button type="submit"
+                                [routerLink]="['/',
+                                { outlets: { popup: 'product/'+
+                                 product.id + '/edit'} }]"
+                                 replaceUrl="true"
+                                 queryParamsHandling="merge"
+                                 class="btn btn-primary btn-sm">
+                            <span class="fa fa-pencil"></span>
+                            <span class="d-none d-md-inline"
+                                jhiTranslate="entity.action.edit">Edit</span>
+                        </button>
+                        <button type="submit"
+                            [routerLink]="['/',
+                                { outlets: { popup: 'product/'+
+                                    product.id + '/delete'} }]"
+                                replaceUrl="true"
+                                queryParamsHandling="merge"
+                                class="btn btn-danger btn-sm">
+                            <span class="fa fa-remove"></span>
+                            <span class="d-none d-md-inline"
+                                jhiTranslate="entity.action.delete">Delete</span>
+                        </button>
+                    </div>
+
+
+
+
+
+
+
+
+                </div>
+            </div>
+        </a>
+    </div>
+</div>
+    <!----->
+
+
+
+
+
+
+
+
+<!--
     <div class="table-responsive" *ngIf="products?.length > 0">
         <table class="table table-striped">
             <thead>
@@ -73,6 +183,7 @@
             </tbody>
         </table>
     </div>
+-->
     <div [hidden]="products?.length === 0">
         <div class="row justify-content-center">
             <jhi-item-count [page]="page" [total]="totalItems" [maxSize]="5" [itemsPerPage]="itemsPerPage"></jhi-item-count>
